--- a/templates/recommendations.html
+++ b/templates/recommendations.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EmotionTunes - Music Recommendations</title>
+    <title>Moodify - Music Recommendations</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 </head>
@@ -11,8 +11,8 @@
     <header>
         <div class="navbar">
             <div class="logo">
-                <img src="{{ url_for('static', filename='images/LogoFypS-01.png') }}" alt="EmotionTunes Logo">
-                <h1>EmotionTunes</h1>
+                <img src="{{ url_for('static', filename='images/LogoFypS-01.png') }}" alt="Moodify Logo">
+                <h1>Moodify</h1>
             </div>
             <nav>
                 <a href="{{ url_for('welcome') }}">Home</a>
@@ -53,7 +53,7 @@
     </main>
 
     <footer>
-        <p>© 2025 EmotionTunes</p>
+        <p>© 2025 Moodify</p>
     </footer>
 
     <script src="{{ url_for('static', filename='js/recommendations.js') }}"></script>
