--- a/templates/login.html
+++ b/templates/login.html
@@ -13,7 +13,7 @@
         <div class="auth-left">
             <div class="logo-container">
                 <h1 class="logo-text">Moodify</h1>
-                <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Moodify Logo" class="logo">
+                <img src="{{ url_for('static', filename='images/LogoFypS-01.png') }}" alt="Moodify Logo" class="logo">
             </div>
             <p class="tagline">
                 "Welcome to Moodify!<br>
