--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -14,7 +14,7 @@
             <div class="user-info" id="userInfo">
                 <span class="user-name">Your name</span>
                 <div class="user-avatar">
-                    <img src="{{ url_for('static', filename='images/user-avatar.jpg') }}" alt="User Avatar">
+                    <img src="{{ url_for('static', filename='images/user-avatar.png') }}" alt="User Avatar">
                 </div>
                 <!-- Dropdown menu -->
                 <div class="user-dropdown" id="userDropdown">
