--- a/templates/login.html
+++ b/templates/login.html
@@ -19,7 +19,7 @@
                 "Welcome to Moodify!<br>
                 Let your emotions guide the<br>
                 music as we tailor the perfect<br>
-                playtred just for you"
+                playlist just for you"
             </p>
         </div>
         
@@ -68,7 +68,7 @@
                 <div class="social-login">
                     <a href="#" class="google-btn">
                         <img src="{{ url_for('static', filename='images/google-icon.png') }}" alt="Google icon">
-                        Sign up with Google
+                        Sign in with Google
                     </a>
                 </div>
                 
