--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -133,7 +133,7 @@
     <section id="upload-section" class="section upload-section">
         <div class="section-container">
             <h2 class="section-title">Upload Your Photo</h2>
-            <p class="section-description">Upload a photo of yourself to detect your emotion</p>
+            <p class="section-description">Upload a clear photo of your face for emotion detection</p>
             
             <div class="upload-content">
                 <div class="upload-container">
@@ -159,8 +159,6 @@
                     </div>
                     <div id="uploadDetectedEmotion" style="display: none;">
                         <h3>Detected Emotion: <span id="uploadEmotionText"></span></h3>
-                        <div id="uploadEmotionConfidence"></div>
-                        
                         <a href="{{ url_for('recommendations') }}" id="uploadGetRecommendations" class="action-button continue-button" style="display: none;">
                             <i class="fas fa-music"></i> Get Music Recommendations
                         </a>
@@ -170,7 +168,7 @@
             
             <div class="section-tip">
                 <i class="fas fa-lightbulb"></i>
-                <p>Upload a clear photo of your face for the most accurate results</p>
+                <p>For best results, use a clear frontal photo with good lighting</p>
             </div>
         </div>
     </section>
